[package]
name = "arkworks-pairing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ark-serialize = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ff = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-ec = { git = "https://github.com/arkworks-rs/algebra", default-features = false }
ark-bls12-381 = { git = "https://github.com/arkworks-rs/curves" }

[patch.crates-io]
ark-std = { git = "https://github.com/arkworks-rs/std" }
ark-ff = { git = "https://github.com/arkworks-rs/algebra"}
ark-ec = { git = "https://github.com/arkworks-rs/algebra"}
ark-serialize = { git = "https://github.com/arkworks-rs/algebra" }